tests/ui/feature-gates/feature-gate-xtensa-target-feature.stderr
error[E0658]: the target feature `bool` is currently unstable
  --> $DIR/feature-gate-xtensa-target-feature.rs:12:18
   |
LL | #[target_feature(enable = "bool")]
   |                  ^^^^^^^^^^^^^^^
   |
   = note: see issue #157063 <https://github.com/rust-lang/rust/issues/157063> for more information
   = help: add `#![feature(xtensa_target_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
